--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,18 +11,29 @@ services:
       DB_USERNAME: root
       DB_PASSWORD: ${DB_PASSWORD}
     depends_on:
-      - maria
+      maria:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   maria:
     image: mariadb:10.5
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: task_manager_db
+      MYSQL_DATABASE: tasks
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   db_data:
