fix: wrong table name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Task-Manager
-spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/task_manager_db
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/tasks
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
